--- a/authenticate-me/frontend/src/index.css
+++ b/authenticate-me/frontend/src/index.css
@@ -5,8 +5,8 @@
   display: none;
 } */
 :root {
-  --site-blue: #008294;
-  --site-red: #f65858;
+  --site-green: #96C832;
+  --site-red: #B8143A;
 }
 
 body {
