--- a/authenticate-me/frontend/src/components/Groups/SingleGroupPage.css
+++ b/authenticate-me/frontend/src/components/Groups/SingleGroupPage.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: row;
   height: 380px;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   width: 1100px;
 }
@@ -87,7 +87,7 @@ h2#single-group-page-name {
 }
 
 .group-navbar-navlink-active {
-  color: var(--site-blue);
+  color: var(--site-green);
 }
 
 #group-page-description-card-bottom {
