--- a/authenticate-me/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/authenticate-me/frontend/src/components/LoginFormModal/LoginForm.css
@@ -4,11 +4,11 @@
   background: url('../../images/background.png');
   width: 470px;
   margin: auto;
-  height: 480px;
+  height: 490px;
 }
 
 #log-in__title {
-  font-weight: 650;
+  font-weight: 500;
   font-size: 20pt;
   margin: 5px 0;
 }
@@ -28,24 +28,27 @@
   height: 60px;
   margin: 0;
   padding: 0;
+  letter-spacing: 1px;
+  line-height: 18px;
 }
 
 #log-in__label {
   align-self: start;
   margin-top: 0;
   height: 18px;
-  font-size: 11pt;
-  font-weight: 600;
+  font-size: 10pt;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 
 .log-in__input {
   box-sizing: border-box;
-  height: 24px;
+  height: 36px;
   width: 100%;
   border: 1px solid gray;
   border-radius: 6px;
   outline: none;
-  margin: 10px 0;
+  margin: 0 0 10px;
   padding: 0;
 }
 
