--- a/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
@@ -4,11 +4,11 @@
   background: url('../../images/background.png');
   width: 470px;
   margin: auto;
-  height: 820px;
+  height: 680px;
 }
 
 #sign-up__title {
-  font-weight: 650;
+  font-weight: 500;
   font-size: 20pt;
   margin: 5px 0;
 }
@@ -25,9 +25,12 @@
   font-size: 10pt;
   align-content: left;
   width: 400px;
-  height: 140px;
+  height: 100px;
   margin: 0;
   padding: 0;
+  letter-spacing: 1px;
+  line-height: 18px;
+  color: red;
 }
 
 .sign-up__error {}
@@ -36,18 +39,19 @@
   align-self: start;
   margin-top: 0;
   height: 18px;
-  font-size: 11pt;
-  font-weight: 600;
+  font-size: 10pt;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 
 .sign-up__input {
   box-sizing: border-box;
-  height: 24px;
+  height: 36px;
   width: 100%;
   border: 1px solid gray;
   border-radius: 6px;
   outline: none;
-  margin: 10px 0;
+  margin: 0 0 5px;
   padding: 0;
 }
 
