--- a/authenticate-me/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/authenticate-me/frontend/src/components/LoginFormModal/LoginForm.css
@@ -30,6 +30,7 @@
   padding: 0;
   letter-spacing: 1px;
   line-height: 18px;
+  color: red;
 }
 
 #log-in__label {
@@ -50,6 +51,7 @@
   outline: none;
   margin: 0 0 10px;
   padding: 0;
+  font-size: 13pt;
 }
 
 .fa-solid.fa-xmark {
