--- a/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
@@ -4,7 +4,7 @@
   background: url('../../images/background.png');
   width: 470px;
   margin: auto;
-  height: 680px;
+  height: 670px;
 }
 
 #sign-up__title {
@@ -53,6 +53,7 @@
   outline: none;
   margin: 0 0 5px;
   padding: 0;
+  font-size: 13pt;
 }
 
 .fa-solid.fa-xmark {
