--- a/authenticate-me/frontend/src/components/InputDiv/InputDiv.css
+++ b/authenticate-me/frontend/src/components/InputDiv/InputDiv.css
@@ -4,6 +4,12 @@
   margin-bottom: 7px;
 }
 
+.input-label {
+  font-size: 10pt;
+  font-weight: 300;
+}
+
+
 .group-form__label {
   margin: 0;
   height: 22px;
@@ -19,7 +25,16 @@
 .group-form__block.group-form__private {
   display: flex;
   flex-direction: row;
+  /* border: 1px solid black;
+  margin-bottom: 15px; */
 }
+
+
+.private-radio-button,
+.private-radio-buttons {
+  margin: 0;
+}
+
 
 .date-time__block {
   display: flex;
@@ -89,7 +104,7 @@
   box-sizing: border-box;
 }
 
-
+.date-time__block>input:focus,
 .event-form__block>select:focus,
 #description:focus,
 .event-form__block>input:focus {
@@ -98,6 +113,7 @@
   border: 1px solid var(--site-red);
 }
 
+.date-time__block>input:hover,
 .event-form__block>select:hover,
 #description:hover,
 .event-form__block>input:hover {
