--- a/authenticate-me/frontend/src/index.css
+++ b/authenticate-me/frontend/src/index.css
@@ -25,7 +25,8 @@ body {
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 100%;
+  /* height: 100vh; */
+  min-height: 100vh;
   background-size: cover;
 
 }
