bottom return navbar

--- a/authenticate-me/frontend/src/components/Events/SingleEventPage.css
+++ b/authenticate-me/frontend/src/components/Events/SingleEventPage.css
@@ -89,6 +89,7 @@ section.event-page-icon-card-section>.icon-description-card-container {
 
 .event-page-footer {
   position: sticky;
+  /* margin-top: auto; */
   bottom: 0;
   left: 0;
   width: 100%;
