--- a/authenticate-me/frontend/src/context/Modal.css
+++ b/authenticate-me/frontend/src/context/Modal.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
   /* width: 600px; */
 }
 
@@ -22,4 +23,5 @@
 #modal-content {
   position: absolute;
   background-color: white;
+  border-radius: 1rem;
 }
