--- a/authenticate-me/frontend/src/components/SplashPage/splashpage.css
+++ b/authenticate-me/frontend/src/components/SplashPage/splashpage.css
@@ -3,7 +3,7 @@ body {
 }
 
 .splashpage-container {
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -91,7 +91,6 @@ h1 {
   display: flex;
   width: 500px;
   justify-content: space-between;
-  padding-bottom: 60px;
 }
 
 
