--- a/authenticate-me/frontend/src/components/Groups/GroupForm.css
+++ b/authenticate-me/frontend/src/components/Groups/GroupForm.css
@@ -2,14 +2,13 @@ div#create-group-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-self: center;
   width: 550px;
   height: 725px;
-  margin-top: 60px;
   border-radius: 2em;
   background-color: white;
   background: linear-gradient(135deg, #e0f7e3, #f7dfdb, #f5e7d7, #ccf2f7);
   box-shadow: -3px 3px 10px 1px #888888;
+  margin-top: 80px;
 }
 
 form#group-form {
@@ -41,7 +40,7 @@ form#group-form {
   margin: 0;
   list-style: none;
   width: 460px;
-  height: 80px;
+  height: 70px;
   padding: 0;
   font-size: 10pt;
   color: var(--site-red);
@@ -129,4 +128,12 @@ form#group-form {
 
 #group-form__title.edit-form::before {
   width: 83px;
+}
+
+#create-group-page-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  top: 0;
 }
