--- a/authenticate-me/frontend/src/components/Groups/GroupForm.css
+++ b/authenticate-me/frontend/src/components/Groups/GroupForm.css
@@ -43,7 +43,7 @@ form#group-form {
   height: 70px;
   padding: 0;
   font-size: 10pt;
-  color: var(--site-red);
+  color: var(--site-blue);
 }
 
 .group-form__block:not(.group-form__private) {
@@ -71,7 +71,7 @@ form#group-form {
   outline: none;
   font-family: 'Poppins', sans-serif;
   background: transparent;
-  border-bottom: 1px solid var(--site-red);
+  border-bottom: 1px solid var(--site-blue);
   border-radius: 6px;
   transition: 0.5s;
 }
@@ -84,7 +84,7 @@ form#group-form {
   font-family: 'Poppins', sans-serif;
   border-radius: 6px;
   transition: 0.5s;
-  border-bottom: 1px solid var(--site-red);
+  border-bottom: 1px solid var(--site-blue);
   box-sizing: border-box;
 }
 
@@ -93,7 +93,7 @@ form#group-form {
 .group-form__block>input:focus {
   background: white;
   transition: 0.5s;
-  border: 1px solid var(--site-red);
+  border: 1px solid var(--site-blue);
 }
 
 .group-form__block>select:hover,
@@ -112,7 +112,7 @@ form#group-form {
   overflow: hidden auto;
   resize: none;
   box-sizing: border-box;
-  border-bottom: 1px solid var(--site-red);
+  border-bottom: 1px solid var(--site-blue);
   border-radius: 6px;
   background: transparent;
   transition: 0.5s;
