--- a/authenticate-me/frontend/src/components/Events/EventForm.css
+++ b/authenticate-me/frontend/src/components/Events/EventForm.css
@@ -43,7 +43,7 @@ form#event-form {
   height: 96px;
   padding: 0;
   font-size: 10pt;
-  color: var(--site-red);
+  color: var(--site-blue);
 }
 
 
@@ -56,7 +56,7 @@ form#event-form {
   overflow: hidden auto;
   resize: none;
   box-sizing: border-box;
-  border-bottom: 1px solid var(--site-red);
+  border-bottom: 1px solid var(--site-blue);
   border-radius: 6px;
   background: transparent;
   transition: 0.5s;
