--- a/authenticate-me/frontend/src/components/InputDiv/InputDiv.css
+++ b/authenticate-me/frontend/src/components/InputDiv/InputDiv.css
@@ -59,7 +59,7 @@
   font-family: 'Poppins', sans-serif;
   border-radius: 6px;
   transition: 0.5s;
-  border-bottom: 1px solid var(--site-red);
+  border-bottom: 1px solid var(--site-blue);
   width: 150px;
 }
 
@@ -88,7 +88,7 @@
   outline: none;
   font-family: 'Poppins', sans-serif;
   background: transparent;
-  border-bottom: 1px solid var(--site-red);
+  border-bottom: 1px solid var(--site-blue);
   border-radius: 6px;
   transition: 0.5s;
 }
@@ -101,7 +101,7 @@
   font-family: 'Poppins', sans-serif;
   border-radius: 6px;
   transition: 0.5s;
-  border-bottom: 1px solid var(--site-red);
+  border-bottom: 1px solid var(--site-blue);
   box-sizing: border-box;
 }
 
@@ -111,7 +111,7 @@
 .event-form__block>input:focus {
   background: white;
   transition: 0.5s;
-  border: 1px solid var(--site-red);
+  border: 1px solid var(--site-blue);
 }
 
 .date-time__block>input:hover,
