--- a/authenticate-me/frontend/src/components/MembershipsPage/MembershipsPage.css
+++ b/authenticate-me/frontend/src/components/MembershipsPage/MembershipsPage.css
@@ -3,6 +3,22 @@
   height: auto;
 }
 
+#membership-page-background>h2 {
+  display: flex;
+  font-size: 20pt;
+  font-weight: 500;
+  margin: 40px 0;
+  align-items: center;
+}
+
+#membership-page-background>h2>.btn-mobile {
+  display: flex;
+  margin-left: auto;
+}
+
+#membership-page-background>h2>.btn-mobile>.btn--remove {
+  font-size: 12pt;
+}
 
 #membership-page-wrapper {
   display: flex;
@@ -16,7 +32,6 @@
 #memberships-page-button-wrapper {
   height: 100%;
   width: 250px;
-  margin-left: auto;
   display: flex;
 }
 
@@ -25,7 +40,7 @@
   flex-direction: row;
   align-items: center;
   /* border: 1px solid black; */
-  margin-top: 20px;
+  margin-bottom: 20px;
   background: white;
   border-radius: 0.75rem;
   box-shadow: -3px 3px 10px 1px #888888;
@@ -42,11 +57,17 @@
   width: 110px;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-end;
+  /* margin-left: auto; */
 }
 
 div.membership-button-wrapper {
   display: flex;
   place-content: center;
   border-radius: 0.5rem;
+}
+
+div.button-container.membership-remove {
+  display: flex;
+  margin-left: auto;
 }
