fix error warnings and redirect errors

--- a/authenticate-me/frontend/src/components/Groups/GroupImagesPage.css
+++ b/authenticate-me/frontend/src/components/Groups/GroupImagesPage.css
@@ -3,4 +3,8 @@
   width: 1100px;
 }
 
-#groups-images-wrapper {}
+#groups-images-container {
+  display: flex;
+  width: 900px;
+  border: 1px solid purple;
+}
