--- a/authenticate-me/frontend/src/components/ImageUpload/ImageUpload.css
+++ b/authenticate-me/frontend/src/components/ImageUpload/ImageUpload.css
@@ -27,3 +27,10 @@
   width: 80%;
   height: 80%;
 }
+
+.scroll-item {
+  margin: 8px 4px;
+  font-size: 11pt;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
