--- a/authenticate-me/frontend/src/components/HomePage/HomePage.css
+++ b/authenticate-me/frontend/src/components/HomePage/HomePage.css
@@ -2,7 +2,8 @@
   height: 70vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding-top: 180px;
   font-size: 30pt;
   font-weight: 600;
