--- a/authenticate-me/frontend/src/components/SplashPage/splashpage.css
+++ b/authenticate-me/frontend/src/components/SplashPage/splashpage.css
@@ -92,6 +92,24 @@ h1 {
   justify-content: space-between;
 }
 
+#links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  font-size: 25px;
+  width: 200px;
+}
+
+#link-icons {
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+}
 
 @media screen and (max-width: 1060px) {
   .splashpage-container {
